# StudentManagementSystemPython

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: run-tests.yml
Tests/: CVMTests.py  DatabaseTests.py  SVMTests.py  TVMTests.py
UI/: Classes.py  Home.py  Students.py  Teachers.py
Utils/: Database.py  Dataclasses.py  Validation.py
Utils/ViewModels/: ClassViewModel.py  StudentViewModel.py  TeacherViewModel.py
