[project]
name = "studentmanagementsystempython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "customtkinter>=5.2.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["Tests"]
python_files = ["*Tests.py", "test_*.py"]
pythonpath = ["."]
